src/test/ui/static/static-mut-bad-types.stderr
error[E0308]: mismatched types
  --> $DIR/static-mut-bad-types.rs:15:13
   |
LL |         a = true; //~ ERROR: mismatched types
   |             ^^^^ expected isize, found bool

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
