src/test/ui/static/static-mut-bad-types.rs
static mut a: isize = 3;

fn main() {
    unsafe {
        a = true; //~ ERROR: mismatched types
    }
}
